--- a/style.css
+++ b/style.css
@@ -7,3 +7,40 @@
 .letra-vermelha {
     color: red;
 }
+
+.letras {
+    width: 510px;
+    margin-top: 1rem;
+    text-align: :center;
+}
+
+.game-container {
+    max-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.tile-row {
+    box-sizing: border-box;
+    justify-content: center;
+    display: flex;
+    margin-bottom: 1rem;
+
+}
+
+.tile-column {
+    background-color: gainsboro;
+    color: black;
+    height: 40px;
+    width: 40px;
+    border-radius: 0.25rem;
+    margin-right: 0.5rem;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    font-size: 20px;
+}
