Criado estilo para o teclado

--- a/style.css
+++ b/style.css
@@ -44,3 +44,11 @@
     display: flex;
     font-size: 20px;
 }
+
+.container-linha-teclado {
+    flex-wrap: wrap;
+    align-items: center;
+    margin-bottom: 0.5rem;
+    justify-content: center;
+    display: flex;
+}
