--- a/style.css
+++ b/style.css
@@ -1,19 +1,3 @@
-.letra-amarela {
-    color: yellow;
-}
-.letra-verde{
-    color: green;
-}
-.letra-vermelha {
-    color: red;
-}
-
-.letras {
-    width: 510px;
-    margin-top: 1rem;
-    text-align: center;
-}
-
 .game-container {
     max-width: 500px;
     margin-left: auto;
@@ -24,28 +8,84 @@
     align-items: center;
 }
 
+.titulo-container {
+    text-align: center;
+    width: 510px;
+    margin-top: 1rem;
+}
+.letra {
+    font-family: 'Quicksand', sans-serif;
+}
+
+.letraAmarela {
+    font-family: 'Quicksand', sans-serif;
+    color: yellow;
+}
+
+.letraVermelha {
+    font-family: 'Quicksand', sans-serif;
+    color: red;
+}
+
+.letraVerde {
+    font-family: 'Quicksand', sans-serif;
+    color: green;
+}
+
+
+
 .tile-row {
-    box-sizing: border-box;
+    margin-bottom: 1rem;
     justify-content: center;
     display: flex;
-    margin-bottom: 1rem;
-
+    box-sizing: border-box;
 }
 
 .tile-column {
     background-color: gainsboro;
-    color: black;
+    color: #252525;
     height: 40px;
-    width: 40px;
+    width: 48px;
     border-radius: 0.25rem;
     margin-right: 0.5rem;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 20px;
+    font-weight: 600;
     align-items: center;
     justify-content: center;
     display: flex;
-    font-size: 20px;
 }
 
-.container-linha-teclado {
+.atual {
+    border: 2px solid black;
+}
+
+.desativado {
+    border: 1px solid #252525;
+}
+
+.certo {
+    background-color: green;
+    color: #f4f3f1;
+}
+
+.errado {
+    background-color: red;
+    color: #f4f3f1;
+}
+
+.lugarErrado {
+    background-color: #cf9d1f;
+    color: #f4f3f1;
+}
+
+.teclado-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.teclado-row-container {
     flex-wrap: wrap;
     align-items: center;
     margin-bottom: 0.5rem;
@@ -53,25 +93,18 @@
     display: flex;
 }
 
-.ativo {
-    border: 3px solid black;
+.teclado-row-container.notAlphabetic {
+    width: 100%
 }
 
-.desativado {
-    border: 1px solid gray;
-}
-
-.errado {
-    background-color: red;
-    color: cornsilk;
-}
-
-.certa {
-    background-color: green;
-    color: cornsilk;
-}
-
-.lugarErrado {
-    background-color: orange;
-    color: cornsilk;
+.teclado-row-container:not(.notAlphabetic) button {
+    width: 8%;
+    height: 40px;
+    border-radius: 0.25rem;
+    margin-right: 0.25rem;
+    border: 1px solid black;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    cursor: pointer;
 }
